# deepmath-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile
.githooks/: pre-commit
src/: gen_dataset.rs  lib.rs  main.rs
src/data_retrieve/: checks.rs  download.rs  mod.rs  unarchive.rs
src/include/: tutorial.md
src/model/: mod.rs  utils.rs
