[package]
name = "deepmath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "deepmath"
path = "src/lib.rs"

[dependencies]
clap = "3.0.10"
colored = "2.0.0"
anyhow = "1.0.52"
bytes = "1.1.0"
flate2 = "1.0.22"
log = "0.4.14"
reqwest = { version = "0.11.9", features = ["blocking"] }
simple_logger = "2.1.0"
tar = "0.4.38"
indicatif = "0.16.2"
termimad = "0.20.0"
crossterm = "0.22.1"
